
2003-04-07	Gaurav Vaish <gvaish_mono AT lycos.com>

	* MobileListItem.cs      : Completed.

2003-04-04	Gaurav Vaish <gvaish_mono AT lycos.com>

	* DeviceSpecificChoice.cs: FindAndApplyProperty(...) - Bug fix.
	* Style.cs               : Added several properties.

2003-04-04	Gaurav Vaish <gvaish_mono AT lycos.com>

	* DeviceSpecificChoice.cs: HasTemplates { get; },
	                         : FindAndApplyEvent(...)     - Completed
	                         : FindAndApplyProperty(...),
	                         : CheckOnPageEvaluator(...)  - Init impl.

2003-04-03	Gaurav Vaish <gvaish_mono AT lycos.com>

	* DeviceSpecific.cs      : Almost done.
	* DeviceSpecificChoice.cs: HasTemplates { get; } - Subbed.
	* Style.cs               : Control      { get; } - Stubbed.
	* MobileControl.cs       : FindClosestTemplateControl()
	                                                 - Stubbed.

2003-02-23	Gaurav Vaish <gvaish_mono AT lycos.com>

	* CustomValidator.cs     : Completed.
	* DeviceSpecific.cs      : Initial implementation.
	* DeviceSpecificChoiceTemplateContainer.cs
	                         : Completed.
	* DeviceSpecificChoiceCollection.cs
	                         : Completed.
	* DeviceSpecificChoice.cs: Initial implementation.

2003-02-23	Gaurav Vaish <gvaish_mono AT lycos.com>

	* Calendar.cs            : Completed.
	* BaseValidator.cs       : Completed.
	* CompareValidator.cs    : Completed.

2003-01-30	Gaurav Vaish <gvaish_mono AT lycos.com>

	* MobileListItemCollection.cs
	                         : Stubbed Add(...) methods.

2003-01-30	Gaurav Vaish <gvaish_mono AT lycos.com>

	* MobileListItemCollection.cs
	                         : Stubbed IStateManager methods.

2003-01-30	Gaurav Vaish <gvaish_mono AT lycos.com>

	* ListDataHelperInternal.cs
	                         : Moved to Util namespace,
	                           as ListDataHelper.cs

2003-01-30	Gaurav Vaish <gvaish_mono AT lycos.com>

	* ListDataHelperInternal.cs